--- a/flight-contract/Cargo.toml
+++ b/flight-contract/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "flight-contract"
 version = "1.0.0"
-authors = ["Diego.Pacheco"]
+authors = ["gispda"]
 edition = "2018"
 
 [dependencies]
